syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "home-lab/grpc/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendRequest) returns (google.protobuf.Empty);
}

message Chat {
  repeated string usernames = 1;
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message CreateRequest {
    Chat chat = 1;
}
message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendRequest {
    Message message = 1;
}